# coding-challenge-python

./: .gitignore  README.md  pascal_triangle.py  pyproject.toml
tests/: test_pascal_triangle.py
